
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int WB ;
 int WRITE_BUFFER_SIZE ;
 int WRITE_THRESHOLD ;
 int assert (int) ;
 int flush_out () ;
 int wptr ;
 int wst ;

__attribute__((used)) static void prepare_write (int x) {
  if (x < 0) {
    x = WRITE_THRESHOLD;
  }
  assert (x > 0 && x <= WRITE_THRESHOLD);
  if (!wptr) {
    wptr = wst = WB;
  }
  if (WB + WRITE_BUFFER_SIZE - wptr < x) {
    flush_out ();
  }
}
